--- a/.github/workflows/wled-compile.yaml
+++ b/.github/workflows/wled-compile.yaml
@@ -1,7 +1,56 @@
-[env:custom_build]
-extends = env:wemos_shield_esp32
-build_flags = ${env:wemos_shield_esp32.build_flags} -D WLED_DISABLE_ESPNOW -D WLED_ENABLE_DMX -D WLED_DISABLE_LOXONE -D WLED_DISABLE_ALEXA -D WLED_DISABLE_HUESYNC -D WLED_MAX_BUSSES=4 -D USERMOD_AUDIOREACTIVE -D USERMOD_DALLASTEMPERATURE -D USERMOD_AUTO_SAVE
-lib_deps = 
-  ${env:wemos_shield_esp32.lib_deps}
-  https://github.com/blazoncek/arduinoFFT.git
-  OneWire@~2.3.5
+name: WLED compile
+
+on:
+    workflow_dispatch:
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+
+    - name: Install PlatformIO
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade platformio
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+    - name: Run PlatformIO
+      run: |
+        rm -rf /tmp/WLEDtemp/* || true
+        mkdir -p /tmp/WLEDtemp
+        wget https://github.com/Aircoookie/WLED/archive/refs/heads/main.zip -O /tmp/WLEDtemp/mm.zip
+        unzip /tmp/WLEDtemp/mm.zip -d /tmp/WLEDtemp
+        find /tmp/WLEDtemp -maxdepth 1 -mindepth 1 -name "*" -type d >> /tmp/WLEDtemp/wledfoldername
+        cd `cat /tmp/WLEDtemp/wledfoldername`
+        npm install
+        echo '[env:custom_build]' >>platformio.ini
+        echo 'extends = env:wemos_shield_esp32' >>platformio.ini
+        echo 'build_flags = ${env:wemos_shield_esp32.build_flags} -D WLED_DISABLE_ESPNOW -D WLED_ENABLE_DMX -D WLED_DISABLE_LOXONE -D WLED_DISABLE_ALEXA -D WLED_DISABLE_HUESYNC -D WLED_MAX_BUSSES=4 -D USERMOD_AUDIOREACTIVE -D USERMOD_DALLASTEMPERATURE -D USERMOD_AUTO_SAVE' >>platformio.ini
+        echo 'lib_deps = ' >>platformio.ini
+        echo '  ${env:wemos_shield_esp32.lib_deps}' >>platformio.ini
+        echo '  https://github.com/blazoncek/arduinoFFT.git' >>platformio.ini
+        echo '  OneWire@~2.3.5' >>platformio.ini
+        
+        pio run -e custom_build || pio run -e custom_build
+    - name: Copy Files
+      run: |
+        cd $GITHUB_WORKSPACE
+        git rm -r $GITHUB_WORKSPACE/*.bin || true
+        WLEDFOLDERNAME=`cat /tmp/WLEDtemp/wledfoldername`
+        cp ${WLEDFOLDERNAME}/build_output/firmware/custom_build.bin $GITHUB_WORKSPACE/
+        date -I | tr -d '\n' >$GITHUB_WORKSPACE/last_update_date.txt
+    - name: Commit Files
+      run: |
+        cd $GITHUB_WORKSPACE
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+        git add $GITHUB_WORKSPACE/custom_build.bin
+        git add $GITHUB_WORKSPACE/last_update_date.txt
+        git commit -m "Commit Custom Build"
+        git push origin main
